<resources>
    <string name="app_name">干货集中营</string>
    <string name="action_settings">设置</string>
    <string name="action_about">关于</string>
    <string name="action_day">选择日期</string>
    <string name="action_collect">收藏</string>

    <string name="browser">浏览器</string>

    <string name="Android">Android</string>
    <string name="IOS">IOS</string>
    <string name="APP">APP</string>
    <string name="web_front">前端</string>
    <string name="recommended">瞎推荐</string>
    <string name="expand">拓展资源</string>
    <string name="video">休息视频</string>
    <string name="welfare">福利</string>

    <string name="today_select">今日精选</string>
    <string name="random_select">随便看看</string>
    <string name="history_select">历史遗迹</string>
    <string name="me_status">我的干货</string>

    <string name="NONE">NONE</string>
    <string name="back">返回</string>
    <string name="got_to_gank">去GankIo看看</string>


    <string name="collect_cancel">取消收藏</string>
    <string name="collect_add">加入收藏</string>

    <string name="welcome">欢迎来到gankIo，代码与妹子的世界</string>
    <string name="author">不明真相的Leo</string>
    <string name="author_gank">GankIo作者</string>
    <string name="author_android">android客户端作者</string>
    <string name="daimajia_introduction">代码家\n国内开源大牛</string>
    <string name="leo_introduction">不明真相的Leo\n一个敲代码的逗逼</string>
    <string name="open_source_framework">开源组件</string>


    <string name="butterknife">Butterknife: https://github.com/JakeWharton/butterknife</string>
    <string name="dagger2">Dagger2: https://github.com/google/dagger</string>
    <string name="retrofit2">Retrofit2: https://github.com/square/retrofit</string>
    <string name="BottomNavigationBar">BottomNavigationBar: https://github.com/RoyWallace/BottomNavigationBar</string>
    <string name="picasso">picasso: https://github.com/square/picasso</string>
    <string name="glide">Glide: https://github.com/bumptech/glide</string>
    <string name="rxjava">Rxjava: https://github.com/ReactiveX/RxJava</string>
    <string name="realm">Realm: https://github.com/realm/realm-java</string>
    <string name="gson">Gson: https://github.com/google/gson</string>

</resources>
